syntax = "proto3";
package com.test.grpc;

option java_multiple_files = true;
option java_package = "com.test.grpc";

message GreetingRequest {
  string request = 1;
}

message GreetingResponse {
  string response = 1;
}

service GreetingService {
  rpc processGrpcRequest(GreetingRequest) returns (GreetingResponse);
}